--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2024"
 [dependencies]
 raylib = "5.5.1"
 rl_input = { path = "rl_input" }
+rustc-hash = "2.1.1"
+serde = "1.0.228"
+toml = "0.9.7"
