--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-raylib = "5.5.1"
+raylib = { version = "5.5.1", features = ["with_serde"] }
 rl_input = { path = "rl_input" }
 rustc-hash = "2.1.1"
 serde = "1.0.228"
+serde_derive = "1.0.228"
 toml = "0.9.7"
