--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-raylib = { version = "5.5.1", features = ["with_serde"] }
+raylib = "5.5.1"
 rl_input = { path = "rl_input" }
 rustc-hash = "2.1.1"
 serde = "1.0.228"
